// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectRegistrationType should render 1`] = `
<div>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-1-menu"
      data-testid="SelectRegistrationType"
      role="combobox"
    >
      <label
        for="downshift-0-input"
        id="downshift-1-label"
      />
      <div
        class="sc-AxheI IkGcK"
        data-testid="SelectRegistrationTypeInput"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-1-menu"
          aria-labelledby="downshift-1-label"
          autocomplete="off"
          class="sc-AxiKw kVCaxI overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 "
          data-testid="SelectRegistrationTypeInput__input"
          id="downshift-0-input"
          placeholder="Choose the type of registration"
          value=""
        />
      </div>
    </div>
    <ul
      aria-labelledby="downshift-1-label"
      class="hidden"
      id="downshift-1-menu"
      role="listbox"
    />
  </div>
</div>
`;

exports[`SelectRegistrationType should render with registration types 1`] = `
<div>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-7-menu"
      data-testid="SelectRegistrationType"
      role="combobox"
    >
      <label
        for="downshift-6-input"
        id="downshift-7-label"
      />
      <div
        class="sc-AxheI IkGcK"
        data-testid="SelectRegistrationTypeInput"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-7-menu"
          aria-labelledby="downshift-7-label"
          autocomplete="off"
          class="sc-AxiKw kVCaxI overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 "
          data-testid="SelectRegistrationTypeInput__input"
          id="downshift-6-input"
          placeholder="Choose the type of registration"
          value=""
        />
      </div>
    </div>
    <ul
      aria-labelledby="downshift-7-label"
      class="hidden"
      id="downshift-7-menu"
      role="listbox"
    />
  </div>
</div>
`;
